# biocredit

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/: CODEBOOK.md
data/raw/nsw/: README.md  nsw_credit_supply_register.csv  nsw_credit_transactions_register.csv
docs/: DATA_CONTRACT.md  DATA_SOURCES.md  MODEL_ASSUMPTIONS.md  PARAMETER_REGISTRY.md  RELATIONSHIP_TO_ORIGINAL.md
manuscript/: main.tex  references.bib  supplementary.tex
output/: MANIFEST.json
output/results/: README.md
output/tables/: community_matrix_comparison.json
scripts/: check_consistency.py  community_matrix.py  derive_parameters.py  format_sobol_table.py  generate_manifest.py  holdout_validation.py  model_diagnostics.py  robustness_demand_functions.py  robustness_empirical.py  robustness_sensitivity.py  robustness_trend.py  run_abm.py  sensitivity_sobol.py  verify_claims.py
src/figures/: fig1_problem.py  fig2_mechanism.py  fig3_policy.py  style.py  suppfig1_robustness.py
src/model/: dynamics.py  formation_model.py  glv_formation.py  interactions.py  species.py
