[project]
name = "competitive-exclusion-biodiversity-markets"
version = "0.1.0"
description = "Market ecology of biodiversity credit markets: competitive exclusion of conservation buyers"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
